# rust-ing

./: Cargo.toml  README.md
.github/workflows/: rust.yml
CLI/cat_fishing/: Cargo.toml
CLI/cat_fishing/src/: lib.rs  main.rs
CLI/cat_fishing/tests/: cli.rs
CLI/echo_rust/: Cargo.toml  README.md  err  out
CLI/echo_rust/src/: main.rs
CLI/echo_rust2/: Cargo.toml  mk-outs.sh
CLI/echo_rust2/src/: main.rs
CLI/echo_rust2/tests/: echo_test.rs
CLI/head_ache/: Cargo.toml
CLI/head_ache/src/: lib.rs  main.rs
CLI/head_ache/tests/: cli.rs
CLI/headache/: Cargo.toml
CLI/headache/src/: lib.rs  main.rs
CLI/headache/tests/: cli.rs
CLI/refined_hello/: Cargo.toml
RustyRefinery/fileplay/: simple_file3.rs
RustyRefinery/fileplay/fileresult/: Cargo.toml
RustyRefinery/fileplay/fileresult/src/: main.rs
RustyRefinery/system_basics/: int-vs-int.rs
WebRustic/structures/src/: main.rs
WebRustic/web_server/: Cargo.toml
WebRustic/web_server/src/: main.rs
csv/src/: main.rs
echo_rust/: Cargo.toml
echo_rust/src/: main.rs
echo_rust/tests/: cli.rs
embedded/blinky-button/: Cargo.toml  rust-toolchain.toml
embedded/hello/: Cargo.toml
embeddedRust/blinky/: Cargo.toml
embeddedRust/blinky/src/: main.rs
embeddedRust/hw-1/: Cargo.toml  README.md
embeddedRust/hw-1/src/: life.rs  main.rs
embeddedRust/ownership/src/: main.rs
fun/CommandLine/catfish/: Cargo.toml
fun/CommandLine/catfish/src/: lib.rs  main.rs
fun/CommandLine/catfish/tests/: cli.rs
fun/CommandLine/echoing/: Cargo.toml
fun/book/RustyRefinery/: README.md
fun/book/web-server/: hello.html
fun/gaming/rust_basics/: Cargo.toml
fun/lists/: Cargo.toml
fun/lists/src/: fifth.rs  first.rs  fourth.rs  lib.rs  second.rs  third.rs
fun/zero2prod/email_system/: Cargo.toml
language/papercut/src/: lib.rs  utils.rs
leetcode/: Cargo.toml
leetcode/src/: lib.rs
lists/src/: first.rs  second.rs
recursion/src/: factorial.rs
refined_hello/src/: main.rs
ria/grep/: Cargo.toml
ria/grep/src/: main.rs
ria/misc/: Cargo.toml
zero2prod/: Cargo.toml
zero2prod/src/: main.rs
(+32 files in other folders)
