[package]
edition      = "2024"
name         = "hello"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "hello"
path = "./src/bin/main.rs"

[dependencies]
esp-hal            = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }
esp-hal-smartled   = { version = "0.17.0" }
smart-leds         = "0.4"

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }

critical-section = "1.2.0"
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target       = { version = "0.6.2", features = ["defmt"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
